ISSUE #194 - Improved B4F styling and card resizing, tree expansion bug hopefully fixed

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -78,6 +78,9 @@ account-projects .projects p {
 account-projects .projects md-icon {
   margin-right: 10px !important;
 }
+account-projects .projects .md-button {
+  margin-right: 20px !important;
+}
 
 /** Account Profile ***************************************************************************************************/
 account-profile .dataContainer {
