--- a/frontend/bid4free/jade/bidProjectSummary.jade
+++ b/frontend/bid4free/jade/bidProjectSummary.jade
@@ -32,7 +32,7 @@
 			md-list-item.md-2-line
 				div.md-list-item-text
 					h3 Completed by
-					p {{vm.projectSummary.completedBy}}
+					p {{vm.projectSummary.completedByPretty}}
 			md-list-item.md-2-line
 				div.md-list-item-text
 					h3 Contact
