ISSUE #194 - Tree height request okay, Group card shows loading info, b4f SubContractors updated

--- a/frontend/groups/jade/groups.jade
+++ b/frontend/groups/jade/groups.jade
@@ -44,3 +44,7 @@ div(ng-switch="vm.toShow")
 	#groupsInfo(ng-switch-when="showInfo" layout="column")
 		.cardInfo
 			p There are currently no groups
+
+	// Loading
+	div(ng-switch-when="showLoading")
+		tdr-progress(info="vm.loadingInfo")
