--- a/frontend/tree/jade/tree.jade
+++ b/frontend/tree/jade/tree.jade
@@ -4,7 +4,7 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 // Tree
 div(class="virtualRepeatInfiniteScroll", ng-show="vm.showTree")
 	md-virtual-repeat-container.vertical-container(md-top-index="vm.topIndex")
-		div(md-virtual-repeat="item in vm.infiniteItemsTree" md-on-demand="" class="repeated-item" md-item-size="1")
+		.treeNodes(md-virtual-repeat="item in vm.infiniteItemsTree" md-on-demand="" class="repeated-item" md-item-size="1")
 			div(style="margin-left:{{item.level * 20}}px" ng-if="item" layout="row")
 				.treeButton(ng-click="vm.expand(item._id)")
 					md-icon.md-accent(md-font-icon="fa-plus-square-o" class="fa" ng-if="!item.expanded" ng-class="{treeButtonDisabled: !item.hasChildren}")
@@ -24,7 +24,7 @@ div(class="virtualRepeatInfiniteScroll", ng-show="vm.showTree")
 // Filter list
 div(class="virtualRepeatInfiniteScroll" ng-if="vm.filterItemsFound")
 	md-virtual-repeat-container.vertical-container
-		div(
+		.treeNodes(
 			md-virtual-repeat="item in vm.infiniteItemsFilter"
 			md-on-demand=""
 			class="repeated-item"
