--- a/frontend/building/jade/building.jade
+++ b/frontend/building/jade/building.jade
@@ -1,9 +1,9 @@
 div(layout="column" layout-align="start center" flex)
-	div(layout="row" flex)
-		div  Org Name: {{ vm.meta.ORGANISATION_NAME }} 
-		div  Class: {{ vm.meta.CLASSIFICATION_CODE_DESCRIPTION }}
-		div  Building name: {{ vm.meta.BUILDING_NAME }}
-		div  Address: {{vm.meta.ADDRESS}}
+	div
+		div(style='margin-left:10px;margin-bottom:10px')  Org Name: {{ vm.meta.ORGANISATION_NAME }} 
+		div(style='margin-left:10px;margin-bottom:10px')  Class: {{ vm.meta.CLASSIFICATION_CODE_DESCRIPTION }}
+		div(style='margin-left:10px;margin-bottom:10px')  Building name: {{ vm.meta.BUILDING_NAME }}
+		div(style='margin-left:10px;margin-bottom:10px')  Address: {{vm.meta.ADDRESS}}
 
 
 
