ISSUE #199 - Draws line from one point to another, added measure plugin

--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -6,6 +6,7 @@
 	panel#rightPanel(account="vm.account", project="vm.project", branch="vm.branch", revision="vm.revision", position="right")
 	bottom-buttons
 	qr-code-reader
+	measure
 
 div(ng-if="vm.state.bid4free")
 	bid4free(account="vm.state.account" project="vm.state.project" branch="vm.state.branch" revision="vm.state.revision" state="vm.state")
