ISSUE #201 - Added Material icon fonts

--- a/frontend/panel/jade/panelCardAdd.jade
+++ b/frontend/panel/jade/panelCardAdd.jade
@@ -1,4 +1,4 @@
 div(layout="row" layout-align="end" layout-margin)
 	md-button.md-accent.md-fab.md-mini(aria-label="Add" ng-click="vm.add()")
-		md-icon(class="angular-material-icons") add
+		md-icon.angular-material-icons add
 
