--- a/frontend/issues/jade/issueArea.jade
+++ b/frontend/issues/jade/issueArea.jade
@@ -1,15 +1,19 @@
-canvas#issueAreaCanvas(ng-show="vm.drawMode")
-md-icon#issueAreaPenIndicator(class="fa fa-circle-thin", ng-show="vm.showPenIndicator")
+div(ng-if="!vm.data")
+    canvas#issueAreaCanvas(ng-show="vm.drawMode")
+    md-icon#issueAreaPenIndicator(class="fa fa-circle-thin", ng-show="vm.showPenIndicator")
 
-svg#issueAreaCentre(height="40", width="40")
-    line(x1="0", y1="20", x2="40", y2="20", style="stroke:rgb(255,255,255);stroke-width:2")
-    line(x1="20", y1="0", x2="20", y2="40", style="stroke:rgb(255,255,255);stroke-width:2")
+    svg#issueAreaCentre(height="40", width="40")
+        line(x1="0", y1="20", x2="40", y2="20", style="stroke:rgb(255,255,255);stroke-width:2")
+        line(x1="20", y1="0", x2="20", y2="40", style="stroke:rgb(255,255,255);stroke-width:2")
 
-#issueAreaButtons(flex, layout="column", layout-align="end end", layout-margin, style="pointer-events:{{vm.pointerEvents}}")
-    a(id="dl", download="Canvas.png", href="#") Download
-    md-button.md-fab(aria-label="Draw", ng-class="vm.buttonDrawClass", ng-click="vm.setupDraw()")
-        md-icon(class="fa fa-pencil-square-o")
-    md-button.md-fab(aria-label="Erase", ng-class="vm.buttonEraseClass", ng-click="vm.erase()")
-        md-icon(class="fa fa-eraser")
-    md-button.md-fab.md-accent(aria-label="Pin", ng-class="vm.buttonPinClass", ng-click="vm.setupPin()")
-        md-icon(class="fa fa-map-pin")
+    #issueAreaButtons(flex, layout="column", layout-align="end end", layout-margin, style="pointer-events:{{vm.pointerEvents}}")
+        a(id="dl", download="Canvas.png", href="#") Download
+        md-button.md-fab(aria-label="Draw", ng-class="vm.buttonDrawClass", ng-click="vm.setupDraw()")
+            md-icon(class="fa fa-pencil-square-o")
+        md-button.md-fab(aria-label="Erase", ng-class="vm.buttonEraseClass", ng-click="vm.erase()")
+            md-icon(class="fa fa-eraser")
+        md-button.md-fab.md-accent(aria-label="Pin", ng-class="vm.buttonPinClass", ng-click="vm.setupPin()")
+            md-icon(class="fa fa-map-pin")
+
+#scribbleDisplay(ng-if="vm.data")
+    img(ng-src="{{vm.scribble}}")
