--- a/frontend/panel/jade/panelCardOptionFilter.jade
+++ b/frontend/panel/jade/panelCardOptionFilter.jade
@@ -1,2 +1,2 @@
 md-button.md-icon-button(aria-label="Filter", ng-click="vm.toggleFilter($event)")
-	md-icon(class="fa fa-search")
+	md-icon.angular-material-icons search
