--- a/frontend/panel/jade/panelCardOptionMenu.jade
+++ b/frontend/panel/jade/panelCardOptionMenu.jade
@@ -1,6 +1,6 @@
 md-menu(md-position-mode="target-right target", md-offset="2 14")
 	md-button.md-icon-button(aria-label="Menu", ng-click="$mdOpenMenu($event)")
-		md-icon(class="fa fa-ellipsis-v")
+		md-icon.angular-material-icons more_vert
 	md-menu-content(width="4")
 		md-menu-item(ng-repeat="menuItem in vm.menu")
 			md-button(ng-click="vm.menuItemSelected($index)")
