--- a/frontend/panel/jade/panel.jade
+++ b/frontend/panel/jade/panel.jade
@@ -13,7 +13,7 @@ div(ng-show="vm.showPanel")
 			)
 			div(ng-if="contentItem.showGap", style="display:block; height:20px;")
 	div#buttons(ng-class="{ active : vm.activate }")
-		.panelButtonGroup(ng-repeat="contentItem in vm.contentItems")
+		.panelButtonGroup(ng-repeat="contentItem in vm.contentItems", layout="column", layout-align="start center")
 			md-button.md-fab.md-primary.md-mini(ng-click="vm.buttonClick(contentItem.type)", aria-label="{{contentItem.title}}")
-				md-icon(class="fa", md-font-icon="{{contentItem.icon}}")
+				md-icon.angular-material-icons {{contentItem.icon}}
 			label {{contentItem.title}}
