--- a/frontend/panel/jade/panelCardOptionVisible.jade
+++ b/frontend/panel/jade/panelCardOptionVisible.jade
@@ -1,3 +1,3 @@
 md-button.md-icon-button(aria-label="Visibility", ng-click="vm.toggleVisible($event)")
-	md-icon(class="fa fa-eye" ng-if='vm.visible')
-	md-icon(class="fa fa-eye-slash" ng-if='!vm.visible')
+	md-icon.angular-material-icons(ng-if='vm.visible') visibility
+	md-icon.angular-material-icons(ng-if='!vm.visible') visibility_off
