ISSUE #201 - Issue add mode display scribble, erase and pin icons in toolbar

--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -190,6 +190,7 @@ issue-area {
   width: 100vw;
   height: 100vh;
   pointer-events: none;
+  overflow: hidden;
 }
 
 issue-area #issueAreaCanvas {
