--- a/frontend/panel/jade/panelCard.jade
+++ b/frontend/panel/jade/panelCard.jade
@@ -12,7 +12,7 @@ div(layout="column", class="md-whiteframe-1dp")
 			span(flex)
 
 			// Options
-			#options
+			#options(layout="row")
 
 	// Card content
 	#panelCardContainer
