--- a/frontend/panel/jade/panelCardOptionScribble.jade
+++ b/frontend/panel/jade/panelCardOptionScribble.jade
@@ -1,2 +1,2 @@
 md-button.md-icon-button(aria-label="Pin", ng-click="vm.setupScribbleMode()")
-	md-icon.angular-material-icons gesture
+	md-icon.angular-material-icons border_color
