--- a/frontend/panel/jade/panelCardOptionErase.jade
+++ b/frontend/panel/jade/panelCardOptionErase.jade
@@ -1,2 +1,3 @@
 md-button.md-icon-button(aria-label="Erase", ng-click="vm.setupEraseMode()")
-	md-icon(class="fa fa-eraser")
+	//md-icon(class="fa fa-eraser")
+	md-icon.angular-material-icons texture
