--- a/frontend/rightPanel/jade/rightPanel.jade
+++ b/frontend/rightPanel/jade/rightPanel.jade
@@ -1,5 +1,5 @@
 #rightPanelButtons(layout="column")
-	div(ng-repeat="button in vm.buttons")
-		md-button.md-accent.md-fab.md-mini(aria-label="{{button.label}}", ng-click="button.click($index)", ng-disabled="button.disabled")
+	div(ng-repeat="button in vm.issueButtons")
+		md-button.md-accent.md-fab.md-mini(aria-label="{{button.type}}", ng-click="button.click(button.type)", ng-disabled="button.disabled")
 			md-tooltip(md-direction="left") {{button.type}}
 			md-icon.angular-material-icons {{button.icon}}
