ISSUE #201 - Scribble working correctly with right panel buttons

--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -17,7 +17,7 @@
 			revision="vm.revision"
 			position="right"
 			style="pointer-events:{{vm.pointerEvents}}")
-		right-panel
+		right-panel(style="pointer-events:{{vm.pointerEvents}}")
 		bottom-buttons(style="pointer-events:{{vm.pointerEvents}}")
 		qr-code-reader
 
