--- a/frontend/panel/jade/panel.jade
+++ b/frontend/panel/jade/panel.jade
@@ -12,7 +12,7 @@ div(ng-show="vm.showPanel")
 				on-height-request="vm.heightRequest(contentItem, height)"
 			)
 			div(ng-if="contentItem.showGap", style="display:block; height:20px;")
-	div#buttons(ng-class="{ active : vm.activate }")
+	div#buttons(ng-class="{ active : vm.activate }", ng-if="vm.position==='left'")
 		.panelButtonGroup(ng-repeat="contentItem in vm.contentItems", layout="column", layout-align="start center")
 			md-button.md-fab.md-primary.md-mini(ng-click="vm.buttonClick(contentItem.type)", aria-label="{{contentItem.title}}")
 				md-icon.angular-material-icons {{contentItem.icon}}
