--- a/frontend/rightPanel/css/rightPanel.css
+++ b/frontend/rightPanel/css/rightPanel.css
@@ -7,3 +7,7 @@ right-panel {
 right-panel #rightPanelButtons .md-button {
     margin-bottom: 15px;
 }
+
+right-panel #rightPanelButtons .fa {
+    font-size: 24px;
+}
