--- a/frontend/rightPanel/jade/rightPanel.jade
+++ b/frontend/rightPanel/jade/rightPanel.jade
@@ -2,4 +2,5 @@
 	div(ng-repeat="button in vm.issueButtons")
 		md-button.md-accent.md-fab.md-mini(aria-label="{{button.type}}", ng-click="button.click(button.type)", ng-disabled="button.disabled")
 			md-tooltip(md-direction="left") {{button.type}}
-			md-icon.angular-material-icons {{button.icon}}
+			md-icon.angular-material-icons(ng-if="button.icon") {{button.icon}}
+			md-icon(ng-if="button.faIcon", class="{{button.faIcon}}")
