--- a/frontend/panel/jade/panelCard.jade
+++ b/frontend/panel/jade/panelCard.jade
@@ -13,6 +13,7 @@ div(layout="column", class="md-whiteframe-1dp")
 
 			// Options
 			#options(layout="row")
+		div
 
 	// Card content
 	#panelCardContainer
