ISSUE #201 - Timestamp for projects list, event for card edit mode

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -66,10 +66,13 @@ account-projects .projects {
   margin-left: 40px;
 }
 
-account-projects .projects p,
+account-projects .projects .projectName,
 account-projects .projects md-icon {
   font-size: 15px;
   color: #4CAF50;
+}
+account-projects .projects .projectTimestamp {
+  color: rgba(0, 0, 0, 0.3);
 }
 account-projects .projects p {
   font-size: 14px;
@@ -77,9 +80,6 @@ account-projects .projects p {
 }
 account-projects .projects md-icon {
   margin-right: 10px !important;
-}
-account-projects .projects .md-button {
-  margin-right: 20px !important;
 }
 
 /** Account Profile ***************************************************************************************************/
