--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -9,7 +9,9 @@
 					p {{account.name}}
 				md-list.projects(ng-if="account.showProjects")
 					md-list-item.md-1-line(ng-repeat="project in account.projects" ng-click="vm.goToProject(account.name, project.name)")
-						md-icon(md-font-icon="fa fa-cube")
-						p {{project.name}}
-						md-button.md-accent(ng-click="vm.b4f(account.name, project.name)" ng-if="project.bif4FreeEnabled") B4F
+						div(layout="row", flex="100", layout-align="start")
+							md-icon(md-font-icon="fa fa-cube")
+							p.projectName(flex) {{project.name}}
+							p.projectTimestamp(flex="20") {{project.timestamp}}
+							md-button.md-accent(ng-click="vm.b4f(account.name, project.name)" ng-if="project.bif4FreeEnabled") B4F
 			md-divider
