--- a/frontend/tree/jade/tree.jade
+++ b/frontend/tree/jade/tree.jade
@@ -3,8 +3,8 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 
 // Tree
 div(class="virtualRepeatInfiniteScroll", ng-show="vm.showTree")
-	md-virtual-repeat-container.vertical-container(md-top-index="vm.topIndex")
-		.treeNodes(md-virtual-repeat="item in vm.infiniteItemsTree" md-on-demand="" class="repeated-item" md-item-size="1")
+	md-virtual-repeat-container.vertical-container(md-top-index="vm.topIndex" ng-if="vm.showNodes")
+		.treeNodes(md-virtual-repeat="item in vm.infiniteItemsTree" md-on-demand="" class="repeated-item")
 			div(style="margin-left:{{item.level * 20}}px" ng-if="item" layout="row")
 				.treeButton(ng-click="vm.expand(item._id)")
 					md-icon.md-accent(md-font-icon="fa-plus-square-o" class="fa" ng-if="!item.expanded" ng-class="{treeButtonDisabled: !item.hasChildren}")
