--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -11,6 +11,8 @@ html(lang="en" ng-app="3drepo").ng-scope
 
 		script(type="text/javascript", src="/public/plugins/base/config.js")
 
+		script(src="//www.google.com/recaptcha/api.js?render=explicit&onload=vcRecaptchaApiLoaded", async, defer)
+
 		// CSS Files
 		each val, key in cssfiles
 			link(rel='stylesheet', type='text/css', href=val)
@@ -24,7 +26,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 
 		// Predefine the app
 		script.
-			angular.module('3drepo', ['ui.router', 'ngMaterial', 'ngAnimate', 'ngSanitize'])
+			angular.module('3drepo', ['ui.router', 'ngMaterial', 'ngAnimate', 'ngSanitize', 'vcRecaptcha'])
 			.constant('structure', !{structure})
 			.constant('parentStates', !{parentStateJSON})
 			//.constant('pluginLevels', !{pluginLevelsJSON})
