ISSUE #210 - Password change and forgot pages

--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -1,9 +1,11 @@
-div(ng-if="!hm.state.changing")
-	div(ng-if="!hm.state.loggedIn")
-		div(ng-if="hm.getLoggedOutUrl()" ng-include="hm.getLoggedOutUrl()")
-		div(ng-if="!hm.getLoggedOutUrl()")
-			login
-	div(ng-if="hm.state.loggedIn")
-		div(ng-if="hm.getLoggedInUrl()" ng-include="hm.getLoggedInUrl()")
-		div(ng-if="!hm.getLoggedInUrl()")
-			account-dir(account="hm.state.account", state="hm.state")
+div(ng-if="!vm.state.changing")
+	div(ng-if="!vm.state.loggedIn")
+		div(ng-if="vm.getLoggedOutUrl()" ng-include="vm.getLoggedOutUrl()")
+		div(ng-if="!vm.getLoggedOutUrl()", ng-switch="vm.notLoggedInToShow")
+			login(ng-switch-when="showLogin")
+			registered(ng-switch-when="showRegistered")
+			password-change(ng-switch-when="showPasswordChange")
+	div(ng-if="vm.state.loggedIn")
+		div(ng-if="vm.getLoggedInUrl()" ng-include="vm.getLoggedInUrl()")
+		div(ng-if="!vm.getLoggedInUrl()")
+			account-dir(account="vm.state.account", state="vm.state")
