--- a/frontend/passwordChange/jade/passwordChange.jade
+++ b/frontend/passwordChange/jade/passwordChange.jade
@@ -1,8 +1,9 @@
-div(flex, layout="column")
-	md-content.md-whiteframe-1dp(aria-label="Registered", flex)
-		md-toolbar
-			.md-toolbar-tools
-				h2 Registered for 3D Repo
-		.userContent(layout="column", layout-align="start center")
-			h3 Congratulations. You have successfully registered for 3D Repo. You may now login to you account.
-			md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
+.md-whiteframe-1dp(layout="column", layout-align="start center", flex, aria-label="Password Change")
+	md-toolbar
+		.md-toolbar-tools
+			h2 Change Password
+	.userContent
+		md-input-container(md-no-float)
+			input(type='password', ng-model='vm.user.password', placeholder='New Password', ng-required, ng-keypress="vm.changePassword($event)")
+		div
+			md-button.md-accent.md-raised(ng-click="vm.changePassword()") Set New Password
