--- a/frontend/registered/jade/registered.jade
+++ b/frontend/registered/jade/registered.jade
@@ -1,8 +1,7 @@
-div(flex, layout="column")
-	md-content.md-whiteframe-1dp(aria-label="Registered", flex)
-		md-toolbar
-			.md-toolbar-tools
-				h2 Registered for 3D Repo
-		.userContent(layout="column", layout-align="start center")
-			h3 Congratulations. You have successfully registered for 3D Repo. You may now login to you account.
-			md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
+md-content.md-whiteframe-1dp(aria-label="Registered")
+	md-toolbar
+		.md-toolbar-tools
+			h2 Registered for 3D Repo
+	.userContent(layout="column", layout-align="start center")
+		h3 Congratulations. You have successfully registered for 3D Repo. You may now login to you account.
+		//md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
